change method and rename functions
